<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">VistaLingua</string>
    <string name="take_picture">Take Picture</string>
    <string name="upload_image">Upload Image</string>
    <string name="translate">Translate</string>
    <string name="extracted_text_hint">Extracted text will appear here</string>
    <string name="recognized_text_hint">Recognized speech will appear here</string>
    <string name="translated_text_hint">Translation will appear here</string>
    <string name="error_no_text">Please extract text from an image first</string>
    <string name="error_no_image">Please select or capture an image first</string>
    <string name="error_camera_permission">Camera permission denied</string>
    <string name="error_storage_permission">Storage permission denied</string>
    <string name="error_load_image">Failed to load image</string>
    <string name="error_extract_text">Failed to extract text</string>
    <string name="error_no_text_found">No text found in the image</string>
    <string name="translating">Translating...</string>
    <string name="error_translation">Translation failed</string>
    <string name="error_no_text_to_translate">No text to translate</string>
    <string name="error_model_download">Could not download language model</string>
    <string name="speak_text">Speak text</string>
    <string name="speak_translated_text">Speak translated text</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="swap_languages">Swap Languages</string>
    <string name="vistalingua">VistaLingua</string>
    <string name="vistalingualogin">VistaLingua</string>
</resources>