<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginsignupbg"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vistalingualogin"
        android:fontFamily="@font/appfont"
        android:textSize="35sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toTopOf="@id/EmailLayout"
        app:layout_constraintStart_toStartOf="@id/EmailLayout"
        app:layout_constraintEnd_toEndOf="@id/EmailLayout"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/EmailLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/EmailText"
            android:layout_width="250dp"
            android:layout_marginTop="50dp"
            android:layout_height="60dp"
            android:hint="@string/email"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/PasswordLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/EmailLayout"
        app:endIconMode="password_toggle"
        app:endIconDrawable="@drawable/ic_password_visibility"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/PasswordText"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:inputType="textPassword"
            android:hint="@string/password" />

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/ForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:text="@string/forgot_password"
        app:layout_constraintEnd_toEndOf="@id/PasswordLayout"
        app:layout_constraintTop_toBottomOf="@id/PasswordLayout" />

    <Button
        android:id="@+id/LoginBtn"
        android:layout_width="132dp"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/blue"
        android:text="@string/login"
        android:textSize="18sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ForgotPassword" />

    <TextView
        android:id="@+id/DontHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/don_t_have_an_account"
        app:layout_constraintEnd_toStartOf="@id/SignUpText"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/LoginBtn" />

    <TextView
        android:id="@+id/SignUpText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/sign_up"
        android:textStyle="bold"
        android:textAllCaps="true"
        app:layout_constraintStart_toEndOf="@id/DontHaveAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/DontHaveAccount" />


</androidx.constraintlayout.widget.ConstraintLayout>