<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginsignupbg"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/EmailLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/EmailText"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginTop="40dp"
            android:hint="@string/email" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/PasswordLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/EmailLayout"
        app:endIconMode="password_toggle"
        app:endIconDrawable="@drawable/ic_password_visibility"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/PasswordText"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:inputType="textPassword"
            android:hint="@string/password"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ConfPasswordLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/PasswordLayout"
        app:endIconMode="password_toggle"
        app:endIconDrawable="@drawable/ic_password_visibility"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ConfPasswordText"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:inputType="textPassword"
            android:hint="@string/confirm_password"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/SignUpBtn"
        android:layout_width="132dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/blue"
        android:text="@string/sign_up"
        android:textSize="18sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ConfPasswordLayout" />

    <TextView
        android:id="@+id/AlreadyHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="80dp"
        android:text="@string/already_have_an_account"
        app:layout_constraintEnd_toStartOf="@id/LoginText"
        app:layout_constraintTop_toBottomOf="@id/SignUpBtn"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/LoginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:text="@string/login"
        app:layout_constraintTop_toBottomOf="@id/SignUpBtn"
        app:layout_constraintStart_toEndOf="@id/AlreadyHaveAccount" />

</androidx.constraintlayout.widget.ConstraintLayout>