<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fortransbg"
    android:padding="16dp">

    <Spinner
        android:id="@+id/sourceLanguageSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        style="@style/CustomSpinnerStyle"
        android:padding="4dp"
        app:layout_constraintEnd_toStartOf="@+id/swapLanguagesButton"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/swapLanguagesButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="3dp"
        android:background="@drawable/ic_bidirectional_arrow"
        android:contentDescription="@string/swap_languages"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:padding="0dp"
        app:backgroundTint="@color/purple_700"
        app:layout_constraintBottom_toBottomOf="@+id/sourceLanguageSpinner"
        app:layout_constraintEnd_toStartOf="@+id/targetLanguageSpinner"
        app:layout_constraintStart_toEndOf="@+id/sourceLanguageSpinner"
        app:layout_constraintTop_toTopOf="@+id/sourceLanguageSpinner" />

    <Spinner
        android:id="@+id/targetLanguageSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        style="@style/CustomSpinnerStyle"
        android:padding="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/swapLanguagesButton"/>

    <TextView
        android:id="@+id/statusText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Press and hold to record"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sourceLanguageSpinner" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/recordButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:src="@android:drawable/ic_btn_speak_now"
        android:backgroundTint="@color/blue"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statusText" />

    <LinearLayout
        android:id="@+id/recognizedTextContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/recordButton">

        <EditText
            android:id="@+id/recognizedText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:drawable/editbox_background"
            android:hint="@string/recognized_text_hint"
            android:minHeight="100dp"
            android:padding="8dp"
            android:scrollbars="vertical"
            android:gravity="top|start"
            android:inputType="textMultiLine"
            android:importantForAutofill="no" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/speakRecognizedText"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/speak_text"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            android:padding="0dp"
            android:backgroundTint="@color/blue"
            app:cornerRadius="10dp"
            app:icon="@android:drawable/ic_btn_speak_now"
            app:iconGravity="textStart"
            app:iconPadding="0dp" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/translateButton"
        android:layout_width="132dp"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:text="Translate"
        android:backgroundTint="@color/blue"
        app:cornerRadius="10dp"
        android:layout_marginRight="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recognizedTextContainer" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/translateButton">

        <TextView
            android:id="@+id/translatedText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:drawable/editbox_background"
            android:hint="@string/translated_text_hint"
            android:minHeight="100dp"
            android:padding="8dp"
            android:scrollbars="vertical" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/speakTranslatedText"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/speak_text"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            android:padding="0dp"
            android:backgroundTint="@color/blue"
            app:cornerRadius="10dp"
            app:icon="@android:drawable/ic_btn_speak_now"
            app:iconGravity="textStart"
            app:iconPadding="0dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>